fixed Information section on Safari

--- a/styles/sass/partials/_home.scss
+++ b/styles/sass/partials/_home.scss
@@ -222,7 +222,7 @@
 
 .information {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     text-align: center;
     height: 110vh;
 }
